[package]
name = "advent-of-code-2023"
version = "0.1.0"
authors = ["bram-inniger"]
edition = "2021"
description = "Repository to store solutions for Advent of Code"
readme = "README.md"
homepage = "https://inniger.be"
repository = "https://github.com/bram-inniger/advent-of-code-2023"
license = " GPL-3.0-or-later"
keywords = ["advent-of-code"]
categories = ["algorithms", "data-structures", "mathematics"]

[dependencies]
chrono = "0.4.31"
indexmap = "2.1.0"
itertools = "0.12.0"
radix-heap = "0.4.2"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "day_22_bench"
harness = false
